--- a/index.html
+++ b/index.html
@@ -8,7 +8,15 @@
     <title>Drag & Drop Vanilla JS</title>
 </head>
 <body>
-    
+    <div class="empty">
+        <div class="fill" draggable="true">
+
+        </div>
+    </div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
+    <div class="empty"></div>
     <script src="./js/app.js"></script>
 </body>
 </html>
